kubernetes/easynotes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easynotes
  namespace: easynotes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: easynotes
  template:
    metadata:
      labels:
        app: easynotes
    spec:
      containers:
      - name: easynotes
        image: ghcr.io/dein-username/easynotes:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: github-registry
