kubernetes/easynotes-service.yml
 
apiVersion: v1
kind: Service
metadata:
  name: easynotes
  namespace: easynotes
spec:
  selector:
    app: easynotes
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
