kubernetes/easynotes-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easynotes-ingress
  namespace: easynotes
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: easynotes
            port:
              number: 8080
